--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,11 @@ dependencies {
     //webflux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    //cloud config client
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
 }
 
 dependencyManagement {
