--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
     //jwt
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    //implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     //webflux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
